--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,11 @@ gems:
 paginate: 5
 paginate_path: "/blog/page:num/"
 
+# Collections
+collections:
+  - speakers
+  - events
+  - days
 
 # Build settings
 markdown: kramdown
