--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title: UIKonf
 email: questions@uikonf.com
-description: UIKonf is an independent conference in Berlin for serious iOS developers. The last three years were a blast. Looking forward to 2016!
+description: UIKonf is an independent conference in Berlin for serious iOS developers. The last four years were a blast. Let's all celebrate the fifth UIKonf in 2017!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://uikonf.com" # the base hostname & protocol for your site
 twitter_username: uikonf
