update base hostname

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: UIKonf
 email: questions@uikonf.com
 description: UIKonf is an independent conference in Berlin for serious iOS developers. The last four years were a blast. Let's all celebrate the fifth UIKonf in 2017!
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://uikonf.com" # the base hostname & protocol for your site
+url: "http://www.uikonf.com" # the base hostname & protocol for your site
 twitter_username: uikonf
 github_username:  uikonf
 ticket_url: https://ti.to/uikonf/uikonf-2019
