Add Julia to authors

--- a/_config.yml
+++ b/_config.yml
@@ -51,6 +51,10 @@ authors:
     name: Maxim Zaks
     twitter: https://twitter.com/icex33
     thumbImg: Maxim.jpg
+  julia:
+    name: Julia Kallenberg
+    twitter: https://twitter.com/kallenbergjulia
+    thumbImg: julia-kallenberg.jpg
   chriseidhof:
     name: Chris Eidhof
     twitter: https://twitter.com/chriseidhof
