tickets in the config

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ cfp_enabled: true # switch to 'true' when cfp is active
 cfp_url: http://cfp.uikonf.com
 tickets_enabled: true # switch to 'true' when ticket are sold
 ticket_url: https://ti.to/uikonf/uikonf-2020
+ticket_widget_id: uikonf/uikonf-2020
 
 # Gems
 plugins:
