--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ cfp_url: http://cfp.uikonf.com
 tickets_enabled: true # switch to 'true' when ticket are sold
 ticket_url: https://ti.to/uikonf/uikonf-2020
 ticket_widget_id: uikonf/uikonf-2020
+social_events_enabled: false
 
 # Gems
 plugins:
