update home, schedule, blog and coc

--- a/_config.yml
+++ b/_config.yml
@@ -72,3 +72,7 @@ authors:
     name: Chris Eidhof
     twitter: https://twitter.com/chriseidhof
     thumbImg: authors/chris_thumb.jpg
+  biancawalty:
+    name: Bianca Stromlund
+    twitter: https://twitter.com/biancawalty
+    thumbImg: authors/bianca-walterspiel.jpg
